# nicxlive

./: .gitignore  BUILD.md  CMakeLists.txt  README.ja.md  README.md  _build_nicx.cmd  _build_nicx_debug.cmd
.github/workflows/: nightly-wasm.yml
core/: debug_log.hpp  math.hpp  puppet.cpp  puppet.hpp  puppet_ext.hpp  render.hpp  runtime_state.cpp  runtime_state.hpp  serde.hpp  texture.cpp  texture.hpp  timing.cpp  timing.hpp  unity_native.cpp  unity_native.hpp
core/common/: utils.hpp
core/math/: camera.cpp  camera.hpp  mat3.cpp  mat3.hpp  mat4.hpp  transform.hpp  triangle.cpp  triangle.hpp  types.hpp  veca.hpp
core/nodes/: common.hpp  composite.cpp  composite.hpp  connected_physics_driver.cpp  connected_physics_driver.hpp  curve.cpp  curve.hpp  deformable.cpp  deformable.hpp  deformer_base.hpp  drawable.cpp  drawable.hpp  driver.hpp  dynamic_composite.cpp  dynamic_composite.hpp  filter.cpp  filter.hpp  grid_deformer.cpp  grid_deformer.hpp  mask.cpp  mask.hpp  mesh_group.cpp  mesh_group.hpp  node.cpp  node.hpp  part.cpp  part.hpp  path_deformer.cpp  path_deformer.hpp  phys.cpp  phys.hpp  projectable.cpp  projectable.hpp  simple_physics_driver.cpp  simple_physics_driver.hpp
core/nodes/deformer/drivers/: phys.cpp  phys.hpp
core/param/: binding.hpp  binding_deformation.cpp  binding_impl.hpp  parameter.hpp
core/render/: backend_queue.cpp  backend_queue.hpp  command_emitter.cpp  command_emitter.hpp  commands.cpp  commands.hpp  common.cpp  common.hpp  graph_builder.cpp  graph_builder.hpp  immediate.cpp  immediate.hpp  part_draw_packet.hpp  profiler.cpp  profiler.hpp  render_pass.hpp  scheduler.cpp  scheduler.hpp  shared_deform_buffer.cpp  shared_deform_buffer.hpp  unity_backend.hpp
doc/: AGENTS.md  _update_compat_unity_backend.py  compat-binding.md  compat-binfmt.md  compat-command_emitter.md  compat-commands.md  compat-common.md  compat-composite.md  compat-dcomposite.md  compat-deformable.md  compat-drawable.md  compat-driver.md  compat-filter.md  compat-fmt.md  compat-grid_deformer.md  compat-io.md  compat-mask.md  compat-meshgroup.md  compat-node.md  compat-parameter.md  compat-part.md  compat-path_deformer.md  compat-projectable.md  compat-queue.md  compat-render-common.md  compat-render-graph.md  compat-render-scheduler.md  compat-runtime_state.md  compat-scheduler.md  compat-serialize.md  compat-simple_physics_driver.md  compat-texture.md  compat-timing.md  compat-transform.md  compat-triangle.md  compat-unity_backend.md  compat-unity_native.md  compat-unity_plugin_impl.md  compat-vec2array.md  compat-webgl_backend.md  (+3 more)
fmt/: binfmt.hpp  fmt.hpp  io.hpp  serialize.hpp
tests/: vec2array_test.cpp
tools/: check_shared_deform_consistency.sh
unity_backend/: NicxliveBehaviour.cs  NicxliveBehaviourEditor.cs  NicxliveMaskURP.shader  NicxlivePartURP.shader  NicxlivePresentURP.shader  NicxliveProjectSetup.cs  NicxliveUnity.csproj  README.md  install-unity-plugin.ps1  unity_backend.cs
utils/: stb_image_impl.cpp  stb_image_write.h  stb_image_write_impl.cpp
wasm/: app.webmanifest  index.html  serve_wasm.py
webgl_backend/: webgl_backend.js
